--- a/package.json
+++ b/package.json
@@ -12,15 +12,18 @@
     "@phosphor-icons/react": "^2.1.7",
     "@react-icons/all-files": "^4.1.0",
     "@vercel/analytics": "^1.4.1",
-    "framer-motion": "^11.15.0",
+    "framer-motion": "^11.18.2",
     "lucide-react": "^0.469.0",
     "next": "15.1.2",
+    "next-themes": "^0.4.4",
+    "nodemailer": "^6.10.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@types/node": "^20",
+    "@types/nodemailer": "^6.4.17",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "eslint": "^9",
